configs_sqrl_shorewall/2015_aug_iptables-save
# iptables-save
# Generated by iptables-save v1.4.21 on Mon Aug 10 12:00:34 2015
*mangle
:PREROUTING ACCEPT [27019639:22289980682]
:INPUT ACCEPT [8116747:9149133772]
:FORWARD ACCEPT [18891473:13139991761]
:OUTPUT ACCEPT [6562269:3388634227]
:POSTROUTING ACCEPT [24037966:16421250927]
-A POSTROUTING -s 10.13.0.0/16 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Aug 10 12:00:34 2015
# Generated by iptables-save v1.4.21 on Mon Aug 10 12:00:34 2015
*nat
:PREROUTING ACCEPT [1766535:138683563]
:INPUT ACCEPT [121253:9971862]
:OUTPUT ACCEPT [122499:12923600]
:POSTROUTING ACCEPT [49452:6756000]
-A POSTROUTING -s 10.13.43.0/28 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 10.13.43.0/28 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 10.13.43.0/28 ! -d 10.13.43.0/28 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.13.43.0/28 ! -d 10.13.43.0/28 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 10.13.43.0/28 ! -d 10.13.43.0/28 -j MASQUERADE
-A POSTROUTING -o lup -j MASQUERADE
COMMIT
# Completed on Mon Aug 10 12:00:34 2015
# Generated by iptables-save v1.4.21 on Mon Aug 10 12:00:34 2015
*filter
:INPUT DROP [24626:2859718]
:FORWARD DROP [10:613]
:OUTPUT ACCEPT [6561969:3388528500]
:BasicSvc - [0:0]
:FromInternalF - [0:0]
:PError - [0:0]
:SSHLimit - [0:0]
-A INPUT -i vshit -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i vshit -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i vshit -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i vshit -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i vocb -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i vocb -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i vocb -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i vocb -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lmd -j ACCEPT
-A INPUT -i ldit -j ACCEPT
-A INPUT -i loben -j ACCEPT
-A INPUT -i wt -j ACCEPT
-A INPUT -i vpriv -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j SSHLimit
-A INPUT -p udp -m udp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 4242 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i vshit -j BasicSvc
-A INPUT -i wg -j BasicSvc
-A INPUT -i lua -j BasicSvc
-A INPUT -i vocb -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A INPUT -i lup -j LOG
-A INPUT -i lup -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A INPUT -i lmd -j PError
-A INPUT -i ldit -j PError
-A INPUT -i loben -j PError
-A INPUT -i wt -j PError
-A INPUT -i vshit -j PError
-A INPUT -i wg -j PError
-A INPUT -i lua -j PError
-A INPUT -i vocb -j PError
-A FORWARD -d 10.13.43.0/28 -o vshit -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.13.43.0/28 -i vshit -j ACCEPT
-A FORWARD -i vshit -o vshit -j ACCEPT
-A FORWARD -o vshit -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i vshit -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i vocb -o vocb -j ACCEPT
-A FORWARD -o vocb -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i vocb -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i lup -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lmd -j FromInternalF
-A FORWARD -i ldit -j FromInternalF
-A FORWARD -i loben -j FromInternalF
-A FORWARD -i wt -j FromInternalF
-A FORWARD -i vshit -o lup -j ACCEPT
-A FORWARD -i wg -o lup -j ACCEPT
-A FORWARD -i lua -o lup -j ACCEPT
-A FORWARD -i vocb -o lup -p udp -m udp --dport 53 -m comment --comment DNS -j ACCEPT
-A FORWARD -i vocb -o lup -p tcp -m tcp --dport 53 -m comment --comment DNS -j ACCEPT
-A FORWARD -d 131.159.207.206/32 -i vocb -o lup -p udp -m udp --dport 1194 -j ACCEPT
-A FORWARD -d 131.159.207.206/32 -i vocb -o lup -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 141.76.2.4/32 -i vocb -o lup -p tcp -j ACCEPT
-A OUTPUT -o vshit -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -o vocb -p udp -m udp --dport 68 -j ACCEPT
-A BasicSvc -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A BasicSvc -p udp -m udp --dport 53 -j ACCEPT
-A BasicSvc -p tcp -m tcp --dport 15678 -j ACCEPT
-A FromInternalF -o lmd -j ACCEPT
-A FromInternalF -o ldit -j ACCEPT
-A FromInternalF -o loben -j ACCEPT
-A FromInternalF -o wt -j ACCEPT
-A FromInternalF -o lup -j ACCEPT
-A PError -p tcp -j REJECT --reject-with tcp-reset
-A PError -p udp -j REJECT --reject-with icmp-port-unreachable
-A PError -j REJECT --reject-with icmp-proto-unreachable
-A SSHLimit -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A SSHLimit -m recent --set --name SSHA --mask 255.255.255.255 --rsource
-A SSHLimit -m recent --update --seconds 60 --hitcount 2 --name SSHA --mask 255.255.255.255 --rsource -j DROP
-A SSHLimit -j ACCEPT
COMMIT
# Completed on Mon Aug 10 12:00:34 2015
